<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="button1_text">spotify streamer</string>
    <string name="button2_text">scores app</string>
    <string name="button3_text">library app</string>
    <string name="button4_text">build it bigger</string>
    <string name="button5_text">xyz reader</string>
    <string name="button6_text">capstone: my own app</string>
</resources>
