<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBDEFB"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="48dp"
        android:paddingTop="8dp"
        android:text="@string/app_title"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text_view"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/spotify_streamer_button"
                style="@style/StandardButtonStyle"
                android:onClick="spotifyToast"
                android:text="@string/button1_text" />

            <Button
                android:id="@+id/scores_button"
                style="@style/StandardButtonStyle"
                android:layout_below="@id/spotify_streamer_button"
                android:onClick="scoresToast"
                android:text="@string/button2_text" />

            <Button
                android:id="@+id/library_button"
                style="@style/StandardButtonStyle"
                android:layout_below="@id/scores_button"
                android:onClick="libraryToast"
                android:text="@string/button3_text" />

            <Button
                android:id="@+id/build_it_bigger_button"
                style="@style/StandardButtonStyle"
                android:layout_below="@id/library_button"
                android:onClick="biggerToast"
                android:text="@string/button4_text" />

            <Button
                android:id="@+id/reader_button"
                style="@style/StandardButtonStyle"
                android:layout_below="@id/build_it_bigger_button"
                android:onClick="readerToast"
                android:text="@string/button5_text" />

            <Button
                android:id="@+id/capstone_button"
                style="@style/StandardButtonStyle.Capstone"
                android:layout_below="@id/reader_button"
                android:onClick="capstoneToast"
                android:text="@string/button6_text" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
